--- a/khoBlog/static/css/blog.css
+++ b/khoBlog/static/css/blog.css
@@ -1,133 +1,107 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
-
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    scrollbar-color: #2a2c2e #1c1e1f;
+.blog-header {
+    line-height: 1;
+    border-bottom: 1px solid #e5e5e5;
 }
 
-body {
-    height: 100vh;
-    width: 100vw;
-    font-family: 'Montserrat';
+.blog-header p {
+    margin-bottom: 0;
 }
 
-#mainDiv {
-    height: 100%;
-    width: 100%;
-    background-color: #333;
-    color: #aaa;
+.blog-header-logo {
+    font-size: 2.25rem;
 }
 
-header {
-    padding: 16px;
+.blog-header-logo:hover {
+    text-decoration: none;
 }
 
-main {
-    background-color: #434343;
-    padding: 0 16px 16px 16px;
+.display-4 {
+    font-size: 2.5rem;
+}
+@media (min-width: 768px) {
+    .display-4 {
+        font-size: 3rem;
+    }
 }
 
-main .post {
-    color: white;
-    padding: 16px;
-}
-
-.postTitle {
-    padding: 10px 0;
-    border-bottom: 1px solid darkGray;
-}
-
-.postPubliDate {
-    font-size: 15pt;
-    color: #aaa;
-    padding: 10px 0;
-}
-
-main #posts {
-    background-color: #434343;
-    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2), 0 4px 20px 0 rgba(0, 0, 0, 0.19);
-    width: 74.999999%;
-}
-
-main #top {
-    padding: 4px 0;
-    color: white;
-}
-
-main a,
-h1 a {
-    color: orange;
+.nav-scroller {
     position: relative;
-    text-decoration: none;
-    transition: color 0.4s ease-out;
+    z-index: 2;
+    height: 2.75rem;
+    overflow-y: hidden;
 }
 
-main a:hover,
-h1 a:hover {
-    color: #ff7b4b;
-    right: 0;
-    text-decoration: none;
+.nav-scroller .nav {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+    padding-bottom: 1rem;
+    margin-top: -1px;
+    overflow-x: auto;
+    text-align: center;
+    white-space: nowrap;
+    -webkit-overflow-scrolling: touch;
 }
 
-main a:hover:after,
-h1 a:hover:after {
-    border-color: #ff7b4b;
-    right: 0;
-    animation: anchor-underline 2s cubic-bezier(0, 0.5, 0, 1) infinite;
-    border-color: #ff7b4b;
+.nav-scroller .nav-link {
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+    font-size: 0.875rem;
 }
 
-main a:after,
-h1 a:after {
-    border-top: 0.1em solid orange;
-    content: '';
-    position: absolute;
-    right: 100%;
-    bottom: 0.14em;
-    left: 0;
-    transition: right 0.4s cubic-bezier(0, 0.5, 0, 1), border-color 0.4s ease-out;
+.card-img-right {
+    height: 100%;
+    border-radius: 0 3px 3px 0;
 }
 
-@keyframes anchor-underline {
-    0%,
-    10% {
-        left: 0;
-        right: 100%;
-    }
-    40%,
-    60% {
-        left: 0;
-        right: 0;
-    }
-    90%,
-    100% {
-        left: 100%;
-        right: 0;
+.flex-auto {
+    -ms-flex: 0 0 auto;
+    flex: 0 0 auto;
+}
+
+.h-250 {
+    height: 250px;
+}
+@media (min-width: 768px) {
+    .h-md-250 {
+        height: 250px;
     }
 }
 
-/* footer {
-    position: fixed;
-    bottom: 16px;
-    left: 16px;
-    right: 16px;
-    height: 50px;
+/* Pagination */
+.blog-pagination {
+    margin-bottom: 4rem;
+}
+.blog-pagination > .btn {
+    border-radius: 2rem;
 }
 
-#khodok {
-    float: right;
-    padding: 16px;
+/*
+   * Blog posts
+   */
+.blog-post {
+    margin-bottom: 4rem;
+}
+.blog-post-title {
+    margin-bottom: 0.25rem;
+    font-size: 2.5rem;
+}
+.blog-post-meta {
+    margin-bottom: 1.25rem;
+    color: #999;
 }
 
-#khodokLink img {
-    opacity: 1;
-    -webkit-transition: 0.3s ease-in-out;
-    transition: 0.3s ease-in-out;
-    width: 50px;
+/*
+   * Footer
+   */
+.blog-footer {
+    padding: 2.5rem 0;
+    color: #999;
+    text-align: center;
+    background-color: #f9f9f9;
+    border-top: 0.05rem solid #e5e5e5;
 }
-
-#khodokLink img:hover {
-    opacity: 0.5;
-} */
+.blog-footer p:last-child {
+    margin-bottom: 0;
+}
