--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        {% comment %} <!-- Global site tag (gtag.js) - Google Analytics -->
+        <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-V7PT0XGK3G"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
@@ -42,7 +42,7 @@
             };
             // Initialize Firebase
             firebase.initializeApp(firebaseConfig);
-        </script> {% endcomment %}
+        </script>
 
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
